searx_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searx-ingress
  namespace: searx
spec:
  rules:
    - host: searx.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searx-service
                port:
                  number: 80
